fix size of form-container to avoid wrapping on Thursdays

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -2,7 +2,7 @@
 
 
 .form-container {
-    width: 543px;
+    width: 575px;
 }
 
 #updateconditions div {
